add null handler2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
         <div class="container">
             <div id="msg">
                 <ul id="ul-msg">
-                    <% if (condition) { %>
+                    <% if (data) { %>
                         <% data.forEach(e => { %>
                             <li class="" style="color: black;">
                                 <%= e.sender %> : <%= e.msg %>  
