--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,8 +85,7 @@
         let input = document.getElementById("input")
         let sendButton = document.getElementById("send")
         var socket = io(window.location.href)
-        // var name = prompt("tulis nama")
-        var name = ""
+        var name = prompt("tulis nama")
         var clients;
         var onlineCount = document.getElementById('online')
 
